-Increased mobile spacing for similar stories -fixed author header block on article

--- a/pages/article/article.css
+++ b/pages/article/article.css
@@ -83,10 +83,6 @@ body > main > div > div > div.header.block > div > div:nth-child(1){
     gap: 5%;
 }
 
-.page-type-article .header .author-body picture{
-    width:25%;
-}
-
 .page-type-article .header .author-desc{
     display:flex;
     flex-direction: column;
@@ -221,7 +217,7 @@ body > main > div > div.content > picture > img{
 }
 
 .page-type-article .author-image {
-    width: 6em;
+    width: 4em;
 }
 
 .page-type-article .author-name {
@@ -256,11 +252,11 @@ body > main > div > div.content > picture > img{
 }
 
 .page-type-article .similar-stories-content{
-    /* max-width: 1280px; */
-    /* width: 90%; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    margin: 6em;
+    max-width: 1280px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin: 6em; */
 }
 
 .page-type-article .similar-stories .similar-stories-header{
@@ -296,7 +292,7 @@ body > main > div > div.content > picture > img{
 }
 
 .page-type-article .similar-stories .stories .block.story a > .story-text > * {
-    padding-left: 5rem;
+    padding-left: clamp(1rem, 5.5vw,5rem);
     margin: unset;
 }
 
@@ -305,6 +301,7 @@ body > main > div > div.content > picture > img{
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
     margin-top: 1rem;
+    line-height: 1em;
 }
 
 .page-type-article .similar-stories .stories .block.story a > .story-text > h3{
@@ -338,6 +335,16 @@ body > main > div > div.content > picture > img{
     width: 100%;
 }
 
+/* @media(max-width: 700px){
+    .page-type-article .similar-stories .stories{
+        flex-direction: column;
+        gap: 3em;
+    }
+    .page-type-article .similar-stories .stories .block.story a > .story-text > * {
+        padding-left: 10px;
+    }
+} */
+
 
 @media (max-width: 1024px) and (min-width:769px) {
     .page-type-article .content .header.block h1{
@@ -345,6 +352,9 @@ body > main > div > div.content > picture > img{
     }
     .page-type-article .content .header.block h2{
         padding-left: 2.5em;
+    }
+    .page-type-article .content .header.block .author-desc h2{
+        padding-left: 0;
     }
 }
 @media (max-width: 768px) and (min-width:426px) {
@@ -357,6 +367,9 @@ body > main > div > div.content > picture > img{
     .page-type-article .content .header.block h2{
         font-size: 1.7em;
         padding-left: 2.1em;
+    }
+    .page-type-article .content .header.block .author-desc h2{
+        padding-left: 0;
     }
 }
 @media (max-width: 425px) and (min-width:376px) {
@@ -372,6 +385,9 @@ body > main > div > div.content > picture > img{
         font-size: 1.2em;
         padding-left: 2.2em;
         padding-right: 0;
+    }
+    .page-type-article .content .header.block .author-desc h2{
+        padding-left: 0;
     }
     .page-type-article .content h2{
         padding: 0;
@@ -423,6 +439,9 @@ body > main > div > div.content > picture > img{
         justify-items: center;
         text-align: center;
     }
+    .page-type-article .similar-stories .stories .block.story{
+        margin-bottom: 2em;
+    }
     .page-type-article .similar-stories .stories .block.story a > .story-text > *{
         padding: 0;
     }
@@ -440,6 +459,9 @@ body > main > div > div.content > picture > img{
         font-size: 1.2em;
         padding-left: 1.9em;
         padding-right: 0;
+    }
+    .page-type-article .content .header.block .author-desc h2{
+        padding-left: 0;
     }
     .page-type-article .lede.block{
         font-size: 1.5em;
@@ -493,6 +515,9 @@ body > main > div > div.content > picture > img{
         grid-template-columns: 100%;
         justify-items: center;
         text-align: center;
+    }
+    .page-type-article .similar-stories .stories .block.story{
+        margin-bottom: 2em;
     }
     .page-type-article .similar-stories .stories .block.story a > .story-text > *{
         padding: 0;
@@ -512,6 +537,9 @@ body > main > div > div.content > picture > img{
         padding-left: 1.9em;
         padding-right: 0;
     }
+    .page-type-article .content .header.block .author-desc h2{
+        padding-left: 0;
+    }
     .page-type-article .lede.block{
         font-size: 1.5em;
     }
@@ -564,6 +592,9 @@ body > main > div > div.content > picture > img{
         grid-template-columns: 100%;
         justify-items: center;
         text-align: center;
+    }
+    .page-type-article .similar-stories .stories .block.story{
+        margin-bottom: 2em;
     }
     .page-type-article .similar-stories .stories .block.story a > .story-text > *{
         padding: 0;
